# fivestar

./: .gitignore  README.md  app.py  main.py  pyproject.toml  utils.py
extention/: Readme.md  background.js  content.js  manifest.json  popup.html  popup.js  style.css
fivestar/: __init__.py  product_info.py  store.py  summary.py
