[tool.poetry]
name = "fivestar"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
transformers = "^4.29.1"
streamlit = "^1.22.0"
capabilities = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
