[tool.poetry]
name = "fivestar"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
transformers = "^4.29.1"
streamlit = "^1.22.0"
capabilities = "^0.3.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
langchain = "^0.0.171"
openai = "^0.27.6"
tabulate = "^0.9.0"
llama-index = "^0.6.8"
chromadb = "^0.3.23"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
